networking-for-ai-inference/k8s/models/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: llm-service
    annotations:
        cloud.google.com/neg: '{"exposed_ports": {"8000":{"name": "base-model-neg"}}}'
    labels:
        app.kubernetes.io/name: vllm-server
        app.kubernetes.io/component: inference-server
spec:
    selector:
        app: vllm-server
    type: ClusterIP
    ports:
        - name: http
          protocol: TCP
          port: 8000
          targetPort: 8000
