networking-for-ai-inference/k8s/models/base/v1-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: default-v1-route
spec:
  parentRefs:
    - name: unified-inference-gateway
      namespace: inference-gateway
      sectionName: https
  hostnames:
    - "gateway.internal.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/
      backendRefs:
        - name: pool
          group: inference.networking.k8s.io
          kind: InferencePool
    - matches:
        - path:
            type: PathPrefix
            value: /cache/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: pool
          group: inference.networking.k8s.io
          kind: InferencePool
    - matches:
        - path:
            type: PathPrefix
            value: /security/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: pool
          group: inference.networking.k8s.io
          kind: InferencePool
